--- a/www/templates/tab-Enroll.html
+++ b/www/templates/tab-Enroll.html
@@ -8,7 +8,7 @@
   	<form name="myForm" id="myForm">
   		<!-- <img id="postImg" class="circleBase type3 postImg" ng-model="modeldata.postImg" src="img/user.png"> -->
   		<img id="postImg" class="circleBase type3 postImg"  ng-show="imgTaken1 !== undefined" ng-src="{{imgTaken1}}" ng-model="modeldata.postImg">
-		<img id="postImg" ng-show="imgTaken1 === undefined" class="circleBase type3 postImg"  ng-model="modeldata.postImg" ng-src="img/user.png">
+		<img id="postImg" ng-show="imgTaken1 === undefined" class="circleBase type3 postImg"  ng-model="modeldata.postImg" ng-src="http://sekho.in/wp-content/uploads/2016/09/Abhishek-Bachchan-Family-Photos-Age-Father-And-Mother-Wife-Biography.jpg">
 
   		<br>
   		<div class="list list-inset" style="text-align: center;">
